--- a/styles.css
+++ b/styles.css
@@ -429,7 +429,11 @@ media queries
 
 .w-60 {
     width: 100%;}
-
+    
+.section-01 {
+    margin-bottom: 20rem !important;
+    padding-top: 8rem !important;}   
+    
 }
 
 @media screen and ( max-width: 700px) {
