--- a/styles.css
+++ b/styles.css
@@ -8,6 +8,15 @@ body {
     background-color: var(--color-00);
     
 }
+
+#suu {
+    width: 100%;
+    height: 100vh;
+    position: fixed;
+    top: 0;
+    display: none;
+}
+
 /* decorative triangles */
 .rect-01 {
     position: fixed;
