--- a/styles.css
+++ b/styles.css
@@ -10,16 +10,6 @@ body {
 }
 
 
-
-
-#suu {
-    width: 100%;
-    height: 100vh;
-    position: fixed;
-    top: 0;
-    display: none;
-}
-
 /* decorative triangles */
 .rect-01 {
     position: fixed;
@@ -144,11 +134,15 @@ body {
 
 .con-news {
     background-color: #2e86f9;
-    height: 0;
+    height: 0px;
     display: flex;
     align-items: center;
     justify-content: center;
     transition: 0.8s;
+}
+
+.show-news {
+    height: 35px;
 }
 
 .new {
@@ -551,6 +545,10 @@ media queries
 .section-01 {
     margin-bottom: 20rem !important;
     padding-top: 8rem !important;}   
+.text-news {
+    font-size: 1.1rem !important;
+}
+
     
 }
 
@@ -564,7 +562,12 @@ media queries
 
 .section-02 {
     height: 170vh;}
-
+.text-news {
+    font-size: 1rem !important;
+    }
+    .show-news {
+        height: 55px;
+    }
 
 }
 
@@ -575,6 +578,8 @@ media queries
     font-size: 5rem;}
 .achievement {
     font-size: 1rem;}
+
+
 
 }
 
